--- a/index.html
+++ b/index.html
@@ -135,6 +135,29 @@
                 </div>
             </div>
 
+            <!-- Integração Stripe -->
+            <div class="project-card">
+                <div class="project-image">
+                    <img src="imgs/55924678.png" alt="Integração Stripe">
+                </div>
+                <div class="project-content">
+                    <h3>Integração de Pagamento Stripe</h3>
+                    <p>Sistema de pagamento integrado com a API da Stripe, oferecendo checkout seguro e processamento de
+                        pagamentos em tempo real.</p>
+                    <div class="project-tech">
+                        <span>Node.js</span>
+                        <span>Express</span>
+                        <span>Stripe API</span>
+                        <span>JavaScript</span>
+                    </div>
+                    <div class="project-links">
+                        <a href="https://github.com/NicollasRezende/integracao-strype" target="_blank" class="btn">
+                            <i class="fab fa-github"></i> Código
+                        </a>
+                    </div>
+                </div>
+            </div>
+
             <!-- IA-RESUM -->
             <div class="project-card">
                 <div class="project-image">
@@ -311,27 +334,52 @@
                 </div>
             </div>
 
-            <!-- Pokedex -->
+            <!-- ZionTecnologia -->
             <div class="project-card">
                 <div class="project-image">
-                    <img src="imgs/55924678.png" alt="Pokedex">
+                    <img src="imgs/55924678.png" alt="ZionTecnologia">
                 </div>
                 <div class="project-content">
-                    <h3>Pokedex</h3>
-                    <p>Aplicação web que consome a PokeAPI para exibir informações sobre Pokémons, com funcionalidades
-                        de busca e filtros.</p>
+                    <h3>ZionTecnologia</h3>
+                    <p>Site institucional desenvolvido para a empresa ZionTecnologia, com design moderno e responsivo
+                        focado na experiência do usuário.</p>
                     <div class="project-tech">
+                        <span>HTML</span>
+                        <span>CSS</span>
                         <span>JavaScript</span>
-                        <span>REST API</span>
-                        <span>CSS3</span>
+                        <span>UI/UX</span>
                     </div>
                     <div class="project-links">
-                        <a href="https://github.com/NicollasRezende/Pokedex" target="_blank" class="btn">
+                        <a href="https://github.com/NicollasRezende/ziontecnologia" target="_blank" class="btn">
                             <i class="fab fa-github"></i> Código
                         </a>
                     </div>
                 </div>
             </div>
+
+            <!-- Calculadora de Calorias -->
+            <div class="project-card">
+                <div class="project-image">
+                    <img src="imgs/55924678.png" alt="Calculadora de Calorias">
+                </div>
+                <div class="project-content">
+                    <h3>Calculadora de Calorias para Corredores</h3>
+                    <p>Aplicação web para cálculo de calorias desenvolvida especialmente para um grupo de corredores,
+                        auxiliando no controle do gasto calórico durante atividades físicas.</p>
+                    <div class="project-tech">
+                        <span>HTML</span>
+                        <span>CSS</span>
+                        <span>JavaScript</span>
+                        <span>Fitness</span>
+                    </div>
+                    <div class="project-links">
+                        <a href="https://github.com/NicollasRezende/calcular-calorias" target="_blank" class="btn">
+                            <i class="fab fa-github"></i> Código
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
         </div>
         </div>
     </section>
