--- a/index.html
+++ b/index.html
@@ -109,9 +109,33 @@
 
 
     <!-- Projetos Atualizados -->
+    
     <section id="projects" class="projects">
         <h2 class="section-title">Projetos em Destaque</h2>
         <div class="projects-grid">
+
+            <!-- Asas Projeto -->
+            <div class="project-card">
+                <div class="project-image">
+                    <img src="imgs/55924678.png" alt="WPP Bot de Vendas">
+                </div>
+                <div class="project-content">
+                    <h3>Site institucional Projeto ASAS</h3>
+                    <p>Um Site institucional Feito para um projeto de incentivo ao esporte da minha cidade.</p>
+                    <div class="project-tech">
+                        <span>React</span>
+                        <span>TypeScript</span>
+                        <span>Vite</span>
+                        <span>Styled Components</span>
+                    </div>
+                    <div class="project-links">
+                        <a href="https://previa-asas.vercel.app/" target="_blank" class="btn">
+                            <i class="fab fa-github"></i> Site
+                        </a>
+                    </div>
+                </div>
+            </div>
+            
             <!-- Bot de Vendas WhatsApp -->
             <div class="project-card">
                 <div class="project-image">
