--- a/index.html
+++ b/index.html
@@ -58,6 +58,12 @@
     <link rel="manifest" href="favicon/site.webmanifest">
     <meta name="theme-color" content="#0a1022">
 
+    <!-- Script do EmailJS -->
+    <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
+
+    <!-- Script da integração EmailJS -->
+    <script src="emailjs.js" defer></script>
+
     <!-- Preload de recursos críticos -->
     <link rel="preload" href="imgs/55924678.png" as="image">
 
