--- a/index.html
+++ b/index.html
@@ -574,14 +574,16 @@
                                     <!-- Nome e Email (linha) -->
                                     <div class="row">
                                         <div class="col-md-6 mb-3">
-                                            <div class="form-group">
+                                            <div class="form-group input-icon">
+                                                <i class="fas fa-user"></i>
                                                 <label for="name" class="form-label">Nome</label>
                                                 <input type="text" class="form-control" id="name" name="name" required
                                                     aria-required="true" placeholder="Seu nome completo">
                                             </div>
                                         </div>
                                         <div class="col-md-6 mb-3">
-                                            <div class="form-group">
+                                            <div class="form-group input-icon">
+                                                <i class="fas fa-envelope"></i>
                                                 <label for="email" class="form-label">Email</label>
                                                 <input type="email" class="form-control" id="email" name="email"
                                                     required aria-required="true" placeholder="seu.email@exemplo.com">
@@ -591,7 +593,8 @@
 
                                     <!-- Assunto -->
                                     <div class="mb-3">
-                                        <div class="form-group">
+                                        <div class="form-group input-icon">
+                                            <i class="fas fa-comment-dots"></i>
                                             <label for="subject" class="form-label">Assunto</label>
                                             <input type="text" class="form-control" id="subject" name="subject" required
                                                 aria-required="true" placeholder="Motivo do contato">
@@ -600,7 +603,8 @@
 
                                     <!-- Mensagem -->
                                     <div class="mb-4">
-                                        <div class="form-group">
+                                        <div class="form-group input-icon">
+                                            <i class="fas fa-pencil-alt"></i>
                                             <label for="message" class="form-label">Mensagem</label>
                                             <textarea class="form-control" id="message" name="message" rows="5" required
                                                 aria-required="true" placeholder="Sua mensagem aqui..."></textarea>
