--- a/index.html
+++ b/index.html
@@ -411,6 +411,10 @@
                                 <i class="devicon-express-original colored" aria-hidden="true"></i>
                                 <span>Express</span>
                             </div>
+                            <div class="skill-item" data-tooltip="Java">
+                                <i class="devicon-java-plain colored" aria-hidden="true"></i>
+                                <span>Java</span>
+                            </div>
                         </div>
                     </div>
 
